✨ feat(conformer): take spec as input
- Update conformer config to use log spectrogram transforms
- Modify ConformerModule to support spectrogram-based input
- Add spectrogram normalization and multi-band MLP preprocessing
- Adjust model architecture to handle spectrogram features

--- a/config/conformer.yaml
+++ b/config/conformer.yaml
@@ -1,6 +1,7 @@
 defaults:
   - user: single_user
-  - transforms: raw_wavform_conformer
+  # - transforms: raw_wavform_conformer
+  - transforms: log_spectrogram
   - model: conformer_ctc
   - optimizer: adam
   - lr_scheduler: linear_warmup_cosine_annealing
