--- a/config/model/conformer_ctc.yaml
+++ b/config/model/conformer_ctc.yaml
@@ -1,6 +1,8 @@
 # @package _global_
 module:
   _target_: emg2qwerty.customs.lightning.ConformerModule
+  in_features: 528  # freq * channels = (n_fft // 2 + 1) * 16
+  mlp_features: [384]
   emb_size: 80
   depth: 6
 
