🔧 refactor(conformer): rename and restructure conformer module
- Rename ConformerModule to EEGConformerModule
- Remove separate module_conformer.py file
- Update import path for Conformer class
- Modify loss calculation to handle non-downsampled inputs
- Add tmp/ to .gitignore
- Remove unused conformer configuration files

--- a/config/eeg_conformer.yaml
+++ b/config/eeg_conformer.yaml
@@ -1,8 +1,8 @@
 defaults:
   - user: single_user
-  # - transforms: raw_wavform_conformer
+  # - transforms: raw_wavform_eeg_conformer
   - transforms: log_spectrogram
-  - model: conformer_ctc
+  - model: eeg_conformer_ctc
   - optimizer: adam
   - lr_scheduler: linear_warmup_cosine_annealing
   - decoder: ctc_greedy
