--- a/config/model/conformer_ctc.yaml
+++ b/config/model/conformer_ctc.yaml
@@ -1,19 +1,22 @@
 # @package _global_
 module:
   _target_: emg2qwerty.customs.lightning.ConformerModule
-  in_features: 528  # freq * channels = (n_fft // 2 + 1) * 16
+  in_features: 528  # freq * channels = (n_fft // 2 + 1) * 16 = 33 * 16
   mlp_features: [384]
-  depth: 2
-  dim_head: 64
-  heads: 8
+  input_dim: 768
+  dim: 128
+  depth: 16
+  dim_head: 32
+  heads: 4
   ff_mult: 2
   conv_expansion_factor: 2
-  conv_kernel_size: 31
+  conv_kernel_size: 32
   attn_dropout: 0.0
   ff_dropout: 0.0
   conv_dropout: 0.0
+  input_dropout: 0.1
 
 datamodule:
-  _target_: emg2qwerty.lightning.WindowedEMGDataModule
+  _target_: emg2qwerty.customs.lightning.ConformerWindowedEMGDataModule
   window_length: 8000  # 4 sec windows for 2kHz EMG
   padding: [1800, 200]  # 900ms past context, 100ms future context
