🚀 feat(conformer): optimize model architecture
encoder_dim 128 -> 144
dim_head 32 -> 36

--- a/config/conformer.yaml
+++ b/config/conformer.yaml
@@ -11,8 +11,9 @@ defaults:
 seed: 1501
 batch_size: 32
 num_workers: 4  # Number of workers for dataloading
-train: False  # Whether to train or only run validation and test
-checkpoint: logs/2025-03-04/conformer_best/checkpoints/epoch=148-step=17880.ckpt  # Optional path to checkpoint file
+train: True  # Whether to train or only run validation and test
+checkpoint: null
+# checkpoint: logs/2025-03-04/conformer_best/checkpoints/epoch=148-step=17880.ckpt  # Optional path to checkpoint file
 monitor_metric: val/CER
 monitor_mode: min
 
