✨ feat(conformer): explore model variations and performance
- Add results for different Conformer configurations
- Implement frequency bin cropping and downsampling transforms
- Create ConformerBandSepModule with separate band decoding
- Remove deprecated conformer.py implementation
- Update model configuration and training script

--- a/config/model/conformer_bandsep_ctc.yaml
+++ b/config/model/conformer_bandsep_ctc.yaml
@@ -1,6 +1,6 @@
 # @package _global_
 module:
-  _target_: emg2qwerty.customs.lightning.ConformerModule
+  _target_: emg2qwerty.customs.lightning.ConformerBandSepModule
   in_features: 528  # freq * channels = (n_fft // 2 + 1) * 16 = 33 * 16
   mlp_features: [384]
   dim: 144
