✨ feat(conformer): implement band separation merge strategies
- Add configurable merge method (max or add) for band-separated Conformer
- Update ConformerBandSepModule to support different merging techniques
- Modify configuration to specify merge strategy
- Adjust input processing for band-separated inputs

--- a/config/conformer_bandsep.yaml
+++ b/config/conformer_bandsep.yaml
@@ -1,7 +1,7 @@
 defaults:
   - user: single_user
   - transforms: log_spectrogram
-  - model: conformer_ctc
+  - model: conformer_bandsep_ctc
   - optimizer: adam
   - lr_scheduler: linear_warmup_cosine_annealing
   - decoder: ctc_greedy
@@ -19,7 +19,7 @@ monitor_mode: min
 
 trainer:
   accelerator: gpu
-  devices: [2] # specify which GPU to use
+  devices: [1] # specify which GPU to use
   num_nodes: 1
   max_epochs: 150
   default_root_dir: ${hydra:runtime.output_dir}
