--- a/config/model/conformer_bandsep_ctc.yaml
+++ b/config/model/conformer_bandsep_ctc.yaml
@@ -14,6 +14,7 @@ module:
   ff_dropout: 0.0
   conv_dropout: 0.0
   input_dropout: 0.1
+  merge_method: add
 
 datamodule:
   _target_: emg2qwerty.customs.lightning.ConformerWindowedEMGDataModule
